ADD: dropdown content missing